# justcall

./: Cargo.toml  README.md  package-lock.json  package.json  test-jitsi.html  test-room-derivation.js  verify-platform.rs
docs/: debugging-connection.md  edge-cases-tested.md  how-to-share-codes.md  jitsi-auth-solution.md  manual-code-setup.md  settings-location-clarification.md  sharing-codes-guide.md  todo-polish.md
docs/project-plan/: 00-original-conversation.md  01-setup-guide.md  02-detailed-project-plan.md  README.md  verify-setup.sh
docs/testing/: debug-remove-button.md  debugging-buttons.md  no-tray-icon-solution.md  phase-4-2-fixes.md  phase-4-2-window-manager-testing.md  phase-5-1-call-controller.md
docs/troubleshooting/: missing-tray-icon.md
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  state.rs
src-tauri/src/controllers/: call_controller.rs  mod.rs
src-tauri/src/services/: conference_window.rs  external_browser.rs  global_shortcuts.rs  mod.rs
src/core/: call_state.rs  crypto.rs  mod.rs  platform.rs  room.rs
src/models/: mod.rs  settings.rs
src/storage/: mod.rs  settings_store.rs
