[package]
name = "justcall"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "verify-platform"
path = "verify-platform.rs"

[dependencies]
# Only essential deps - we avoid complex dependency trees
rand = "0.8"         # Cryptographically secure random for code generation
data-encoding = "2.5" # Base32 encoding (simple, well-tested lib)
sha2 = "0.10"         # SHA256 hashing for room ID derivation
