[package]
name = "justcall"
version = "0.1.0"
edition = "2021"

[dependencies]
# Only essential deps - we avoid complex dependency trees
rand = "0.8"         # Cryptographically secure random for code generation
data-encoding = "2.5" # Base32 encoding (simple, well-tested lib)
sha2 = "0.10"         # SHA256 hashing for room ID derivation
serde = { version = "1.0", features = ["derive"] } # Serialization framework
serde_json = "1.0"   # JSON support for settings
